# back/routes/calendar.js
@@ -11,6 +11,36 @@ const { Op } = require("sequelize");
 const authJWT = require("../utils/authJWT");
 const { deleteAlertsByCalendarId } = require("../realTimeAlerts");
 
+router.get("/getMyCalendars", authJWT, async (req, res, next) => {
+  try {
+    const me = await User.findOne({ where: { id: req.myId } });
+
+    const privateCalendar = await me.getPrivateCalendar();
+
+    const groupCalendars = await me.getGroupCalendars({
+      include: [
+        {
+          model: User,
+          as: "CalendarMembers",
+          attributes: {
+            exclude: ["password", "checkedCalendar"],
+          },
+          through: { as: "userAuthority", attributes: ["authority"] },
+        },
+      ],
+      joinTableAttributes: [],
+    });
+
+    return res.status(200).send({
+      privateCalendar: privateCalendar,
+      groupCalendars: groupCalendars,
+    });
+  } catch (error) {
+    console.error(error);
+    next(error);
+  }
+});
+
 router.post("/createGroupCalendar", authJWT, async (req, res, next) => {
   try {
     await sequelize.transaction(async (t) => {
@@ -46,17 +76,19 @@ router.post("/createGroupCalendar", authJWT, async (req, res, next) => {
 
 router.post("/editGroupCalendar", authJWT, async (req, res, next) => {
   try {
+    const myAuthority = await CalendarMember.findOne({
+      UserId: req.myId,
+      CalendarId: req.body.calendarId,
+    });
+
+    if (myAuthority.authority < 3) {
+      return res.status(400).send({ message: "권한이 없습니다!" });
+    }
     const changeCalendar = await Calendar.findOne({
       where: { id: req.body.calendarId },
     });
 
     await sequelize.transaction(async (t) => {
-      if (changeCalendar.OwnerId !== req.myId) {
-        return res
-          .status(400)
-          .send({ message: "캘린더의 오너만 캘린더를 수정할 수 있습니다!" });
-      }
-
       await changeCalendar.update(
         {
           name: req.body.calendarName,
@@ -88,54 +120,26 @@ router.post("/editGroupCalendar", authJWT, async (req, res, next) => {
   }
 });
 
-router.post("/editGroupCalendarColor", authJWT, async (req, res, next) => {
-  try {
-    const changeCalendar = await Calendar.findOne({
-      where: { id: req.body.calendarId },
-    });
-
-    await sequelize.transaction(async (t) => {
-      if (changeCalendar.OwnerId !== req.myId) {
-        return res
-          .status(400)
-          .send({ message: "캘린더의 오너만 캘린더를 수정할 수 있습니다!" });
-      }
-
-      await changeCalendar.update(
-        {
-          color: req.body.calendarColor,
-        },
-        {
-          transaction: t,
-        }
-      );
-
-      return res.status(200).send(changeCalendar);
-    });
-  } catch (error) {
-    console.error(error);
-    next(error);
-  }
-});
-
 router.post("/deleteGroupCalendar", authJWT, async (req, res, next) => {
   try {
+    const myAuthority = await CalendarMember.findOne({
+      UserId: req.myId,
+      CalendarId: req.body.calendarId,
+    });
+
+    if (myAuthority.authority < 3) {
+      return res.status(400).send({ message: "권한이 없습니다!" });
+    }
+
     const exCalendar = await Calendar.findOne({
       where: {
         id: req.body.calendarId,
       },
     });
     if (!exCalendar) {
-      return res.status(400).send({
+      return res.status(402).send({
         message:
           "삭제하려는 캘린더를 찾을 수 없습니다 입력값을 다시 확인해주세요",
-      });
-    }
-
-    if (exCalendar.OwnerId !== req.myId) {
-      return res.status(401).send({
-        message:
-          "삭제하려는 유저가 캘린더의 주인이 아닙니다 본인의 캘린더인지 다시 확인해주세요",
       });
     }
 
@@ -157,18 +161,27 @@ router.post("/deleteGroupCalendar", authJWT, async (req, res, next) => {
 
 router.post("/inviteGroupCalendar", authJWT, async (req, res, next) => {
   try {
+    const myAuthority = await CalendarMember.findOne({
+      UserId: req.myId,
+      CalendarId: req.body.calendarId,
+    });
+
+    if (myAuthority.authority < 3) {
+      return res.status(400).send({ message: "권한이 없습니다!" });
+    }
+
     const guest = await User.findOne({
       where: { email: req.body.guestEmail },
     });
     if (!guest) {
-      return res.status(400).send({ message: "존재하지 않는 유저입니다!" });
+      return res.status(402).send({ message: "존재하지 않는 유저입니다!" });
     }
 
     const alreadyInvite = await Invite.findOne({
       where: {
         [Op.and]: {
           state: 0,
-          CalendarGuestId: guest.id,
+          guestId: guest.id,
           HostCalendarId: req.body.calendarId,
         },
       },
@@ -191,9 +204,10 @@ router.post("/inviteGroupCalendar", authJWT, async (req, res, next) => {
     await sequelize.transaction(async (t) => {
       await Invite.create(
         {
-          CalendarHostId: req.myId,
-          CalendarGuestId: guest.id,
+          hostId: req.myId,
+          guestId: guest.id,
           HostCalendarId: req.body.calendarId,
+          authority: req.body.authority,
         },
         { transaction: t }
       );
@@ -219,6 +233,86 @@ router.post("/inviteGroupCalendar", authJWT, async (req, res, next) => {
   }
 });
 
+router.post("/resignCalendar", authJWT, async (req, res, next) => {
+  try {
+    const groupCalendar = await Calendar.findOne({
+      where: { id: req.body.calendarId },
+    });
+
+    if (!groupCalendar) {
+      return res.status(400).send({ message: "존재하지 않는 캘린더 입니다!" });
+    }
+
+    await sequelize.transaction(async (t) => {
+      await CalendarMember.destroy(
+        {
+          where: {
+            [Op.and]: { UserId: req.myId, CalendarId: req.body.calendarId },
+          },
+        },
+        { transaction: t },
+        {
+          force: true,
+        }
+      );
+    });
+
+    return res.status(200).send({ success: true });
+  } catch (error) {
+    console.error(error);
+    next(error);
+  }
+});
+
+router.post("/sendOutUser", authJWT, async (req, res, next) => {
+  try {
+    const myAuthority = await CalendarMember.findOne({
+      UserId: req.myId,
+      CalendarId: req.body.calendarId,
+    });
+
+    if (myAuthority.authority < 3) {
+      return res.status(400).send({ message: "권한이 없습니다!" });
+    }
+
+    const member = await User.findOne({
+      where: { email: req.body.userEmail },
+    });
+    if (!member) {
+      return res.status(402).send({ message: "존재하지 않는 유저입니다!" });
+    }
+
+    const isGroupMember = await CalendarMember.findOne({
+      where: {
+        [Op.and]: { UserId: member.id, CalendarId: req.body.calendarId },
+      },
+    });
+
+    if (!isGroupMember) {
+      return res
+        .status(403)
+        .send({ message: "그룹 캘린더에 존재하지 않는 유저입니다!" });
+    }
+
+    await sequelize.transaction(async (t) => {
+      await CalendarMember.destroy(
+        {
+          where: {
+            [Op.and]: { UserId: member.id, CalendarId: req.body.calendarId },
+          },
+        },
+        { transaction: t },
+        { force: true }
+      );
+    });
+
+    return res.status(200).send({ success: true });
+  } catch (e) {
+    console.error(e);
+    next(e);
+  }
+});
+
 router.post("/acceptCalendarInvite", authJWT, async (req, res, next) => {
   try {
     const me = await User.findOne({ where: { id: req.myId } });
@@ -241,36 +335,44 @@ router.post("/acceptCalendarInvite", authJWT, async (req, res, next) => {
       },
     });
     if (alreadyCalendarMember) {
-      return res.status(400).send({ message: "이미 캘린더의 그룹원 입니다!" });
+      return res.status(402).send({ message: "이미 캘린더의 그룹원 입니다!" });
     }
 
     const deletedInvite = await Invite.findOne({
       where: {
         [Op.and]: {
-          CalendarGuestId: req.myId,
-          CalendarHostId: req.body.hostId,
+          guestId: req.myId,
           HostCalendarId: req.body.calendarId,
         },
       },
     });
+
     if (!deletedInvite) {
-      return res.status(400).send({ message: "존재하지 않는 초대장입니다!" });
+      return res.status(403).send({ message: "존재하지 않는 초대장입니다!" });
     }
 
     await sequelize.transaction(async (t) => {
+      await CalendarMember.create(
+        {
+          authority: deletedInvite.authority,
+          UserId: req.myId,
+          CalendarId: req.body.calendarId,
+        },
+        {
+          transaction: t,
+        }
+      );
+
       await Invite.destroy({
         where: {
           [Op.and]: {
-            CalendarGuestId: req.myId,
-            CalendarHostId: req.body.hostId,
+            guestId: req.myId,
             HostCalendarId: req.body.calendarId,
           },
         },
         transaction: t,
         force: true,
       });
-
-      await groupCalendar.addCalendarMembers(me, { transaction: t });
 
       const members = await groupCalendar.getCalendarMembers();
       await Promise.all(
@@ -316,43 +418,41 @@ router.post("/rejectCalendarInvite", authJWT, async (req, res, next) => {
       },
     });
     if (alreadyCalendarMember) {
-      return res.status(400).send({ message: "이미 캘린더의 그룹원 입니다!" });
+      return res.status(402).send({ message: "이미 캘린더의 그룹원 입니다!" });
     }
 
     const deletedInvite = await Invite.findOne({
       where: {
         [Op.and]: {
-          CalendarGuestId: req.myId,
-          CalendarHostId: req.body.hostId,
+          guestId: req.myId,
           HostCalendarId: req.body.calendarId,
         },
       },
     });
     if (!deletedInvite) {
-      return res.status(400).send({ message: "존재하지 않는 초대장입니다!" });
+      return res.status(403).send({ message: "존재하지 않는 초대장입니다!" });
     }
 
     await sequelize.transaction(async (t) => {
+      await Alert.create(
+        {
+          UserId: deletedInvite.CalendarHostId,
+          type: "calendarInviteReject",
+          content: `${me.nickname}님이 ${groupCalendar.name} 캘린더의 초대를 거부하셨습니다.`,
+        },
+        { transaction: t }
+      );
+
       await Invite.destroy({
         where: {
           [Op.and]: {
-            CalendarGuestId: req.myId,
-            CalendarHostId: req.body.hostId,
+            guestId: req.myId,
             HostCalendarId: req.body.calendarId,
           },
         },
         transaction: t,
         force: true,
       });
-
-      await Alert.create(
-        {
-          UserId: req.body.hostId,
-          type: "calendarInviteReject",
-          content: `${me.nickname}님이 ${groupCalendar.name} 캘린더의 초대를 거부하셨습니다.`,
-        },
-        { transaction: t }
-      );
     });
     return res.status(200).send({ success: true });
   } catch (error) {
@@ -363,21 +463,28 @@ router.post("/rejectCalendarInvite", authJWT, async (req, res, next) => {
 
 router.post("/giveAuthority", authJWT, async (req, res, next) => {
   try {
+    const myAuthority = await CalendarMember.findOne({
+      UserId: req.myId,
+      CalendarId: req.body.calendarId,
+    });
+
+    if (myAuthority.authority < 3) {
+      return res.status(400).send({ message: "권한이 없습니다!" });
+    }
+
+    const member = await User.findOne({
+      where: { email: req.body.userEmail },
+    });
+    if (!member) {
+      return res.status(402).send({ message: "존재하지 않는 유저입니다!" });
+    }
+
     const groupCalendar = await Calendar.findOne({
       where: { id: req.body.calendarId },
     });
 
-    if (req.myId != groupCalendar.OwnerId) {
-      return res
-        .status(400)
-        .send({ message: "권한 부여는 달력의 오너만 가능합니다!" });
-    }
-
-    const member = await User.findOne({
-      where: { email: req.body.memberEmail },
-    });
-    if (!member) {
-      return res.status(400).send({ message: "존재하지 않는 유저입니다!" });
+    if (!groupCalendar) {
+      return res.status(403).send({ message: "존재하지 않는 캘린더입니다!" });
     }
 
     const isGroupMember = await CalendarMember.findOne({
@@ -388,14 +495,8 @@ router.post("/giveAuthority", authJWT, async (req, res, next) => {
 
     if (!isGroupMember) {
       return res
-        .status(400)
-        .send({ message: "그룹 캘린더에 존재하지 초대되지 않은 유저입니다!" });
-    }
-
-    if (req.body.newAuthority > 2) {
-      return res
-        .status(400)
-        .send({ message: "달력 오너보다 낮은 권한만 부여할 수 있습니다!" });
+        .status(40)
+        .send({ message: "그룹 캘린더에 존재하지 않는 유저입니다!" });
     }
 
     await sequelize.transaction(async (t) => {
